Fix mobile layout issues

--- a/input/scss/_overrides.scss
+++ b/input/scss/_overrides.scss
@@ -24,3 +24,10 @@ header.masthead {
     }
   }
 }
+
+div#posts {
+  border: none;
+  @media only screen and (min-width: 992px) {
+    border-right: 1px solid #eeeeee;
+  }
+}
